# yadro-test-task-1

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  analyzer.py  install.sh
include/: QAM_modem.hpp  QAM_modulator.hpp  channel.hpp  simulation.hpp  sub_func.hpp
src/: QAM_modem.cpp  QAM_modulator.cpp  channel.cpp  main.cpp  simulation.cpp  sub_funcs.cpp
tests/: QAM_modem.cpp  QAM_modem_test.cpp  QAM_modulator.cpp  channel.cpp  channel_test.cpp  check_constellations.py  main.cpp  main_test.cpp  sub_funcs.cpp  sub_funcs_test.cpp
